[tool.poetry]
name = "confu"
repository = "https://github.com/20c/confu"
version = "1.6.1"
description = "Configuration file validation and generation"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]



[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
# tests
pytest = ">=5,<6"
pytest-cov = ">=2.3.1,<3.0"
tox = ">=3.0,<4.0"
click = ">=7,<8"

# linting
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
# docs
markdown-include= ">=0.5,<1"
mkdocs = ">=1.0.0,<2.0.0"
pymdgen = "<2"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
