[tool.poetry]
name = "confu"
version = "1.8.0"
description = "Configuration file validation and generation"
readme = "README.md"
repository = "https://github.com/20c/confu"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

packages = [{ include = "confu", from = "src" }]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = ">=2.3.1,<3.0"
tox = ">=3.0,<4.0"
click = ">=7,<8"

# lint
black = { version = ">=20", allow-prereleases = true }
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.812"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"

# ctl
ctl = "^1"
jinja2 = "^2.11.2"
tmpl = "^1"
twine = "^3.3.0"

[tool.poetry.extras]
docs = ["markdown-include", "mkdocs", "pymdgen"]

[tool.poetry.dev-dependencies.markdown-include]
version = ">=0.5,<1"
optional = true

[tool.poetry.dev-dependencies.mkdocs]
version = ">=1.0.0,<2.0.0"
optional = true

[tool.poetry.dev-dependencies.pymdgen]
version = "<2"
optional = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
