[tool.poetry]
name = "confu"
version = "1.8.0"
description = "Configuration file validation and generation"
readme = "README.md"
repository = "https://github.com/20c/confu"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

packages = [{ include = "confu", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
munge = ">=1.2.1"

[tool.poetry.dev-dependencies]
click = ">=7"

# testing
codecov = ">=2"
coverage = ">=5"
pytest = ">=6"
pytest-django = ">=3.8"
pytest-cov = "*"
tox = ">=3.0,<4.0"
tox-gh-actions = ">=2.9.1"

# linting
# bandit = ">=1.6.2"
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.2.3"

# ctl
ctl = ">=1"
jinja2 = ">=2"
tmpl = ">=1"

[tool.poetry.extras]
docs = ["markdown-include", "mkdocs", "pymdgen"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
